add rheakv dockerfile

--- a/jraft-rheakv/pom.xml
+++ b/jraft-rheakv/pom.xml
@@ -10,8 +10,10 @@
     <artifactId>jraft-rheakv</artifactId>
     <packaging>pom</packaging>
     <name>jraft-rheakv ${project.version}</name>
+
     <modules>
         <module>rheakv-core</module>
         <module>rheakv-pd</module>
+        <module>rheakv-server</module>
     </modules>
 </project>
